chore: setup basic app

--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <title>tauri vite example</title>
     <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1.0"
+    />
+    <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; style-src 'self' 'unsafe-inline';"
     />
