--- a/packages/app/src/dev/index.html
+++ b/packages/app/src/dev/index.html
@@ -10,6 +10,7 @@
     />
   </head>
   <body>
-    <div id="root">hello</div>
+    <div id="root"></div>
+    <script src="./index.ts" type="module"></script>
   </body>
 </html>
